Bugfix Test: Testing fix for iphone option touch bleed during transition.

--- a/components/AppBody/styles.css
+++ b/components/AppBody/styles.css
@@ -10,11 +10,13 @@
 .appBodyTransition-enter.appBodyTransition-enter-active {
   -webkit-animation-delay: .5s;
   animation-delay: .5s;
+  z-index: -1;
 }
 
 .appBodyTransition-leave.appBodyTransition-leave-active {
   -webkit-animation-delay: .5s;
   animation-delay: .5s;
+  z-index: 10;
 }
 
 
